# browser-use

./: .cursorrules  .env.example  .env.swp  .gitattributes  .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.MD  AGENTS.md  AGENTS.zh.md  ARCHITECTURE_TH.md  CAPTURE_SCHEMA.md  CHANGELOG_SANITIZATION.md  CLAUDE.md  CLOUD.md  CLOUD.zh.md  CODEXIFY_BASELINE.md  CODEXIFY_IMPLEMENTATION_PLAN.md  CODEXIFY_MIGRATION_NOTES.md  CODEXIFY_STRICT_REPLACEMENT_PLAN.md  COMET_README.md  CONTRIBUTING.md  Dockerfile  ENV_CONFIG_TH.md  FIX-CHROMIUM.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  LLM.md  PRODUCTION-GUIDE.md  PROJECT_STRUCTURE.md  PR_DESCRIPTION.md  PULL_REQUEST.md  QUICK_START_TH.md  RAW_CDP_CODE_MODE_IMPLEMENTATION_PLAN.md  README.md  README.zh.md  README_PT-BR.md  README_multiagent.md  README_zh.md  RELIABILITY_IMPROVEMENTS.md  (+96 more)
.cursor/rules/: browser-use-rules.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1_element_detection_bug.yml  performance_issue.yml  security_issue.yml
.github/workflows/: actionlint.yml  ci.yml  (+15 more)
.understand-anything/: .understandignore
betway_automation/: __init__.py  controller.py  models.py  test_login.py  test_simple.py
browser_use/: README.md  __init__.py  action_scorer.py  actions.py  cache.py  cli.py  cli_helpers.py  cli_navigator.py  config.py  driver.py  event_bus.py  exceptions.py  factory.py  iframe_detection.py  init_cmd.py  init_template_manifest.py  llm.py  logging_config.py  logging_tui.py  metrics.py  milvus_embeddings.py  observability.py  playwright.py  playwright_recorder.py  state_embedder.py  template_library_manifest.py  typing.py  utils.py  voice.py
comet/: config.py  main.py  requirements.txt
configs/: multiagent_azure.yaml  multiagent_default.yaml
data/: device_id
doc-experiments/: pydoc-markdown.md
docs/: branching_strategy.md  docs.json  extraction-improvement-plan-v2.md  extraction-improvement-plan.md  full_eval_roadmap.md  introduction.mdx  logview.py  mcp_integration_architecture.md  mint.json  omniparser_integration.md  quickstart.mdx  standee_detection_architecture.md  study_scope_full_eval.md  supported-models.md  supported-models.mdx  vercel-marketplace.md
eval/: browsers.py  claude-3.5.py  claude-3.6.py  claude-3.7.py  groq.py  judge_system.py  models.py  service.py  web_judge.py
evals/: dummy_checkout.html  run_benchmark.py
examples/: advance.py  amazon_search.py  app.py  bedrock_claude.py  bedrock_example.py  browser_window_size_demo.py  captcha.py  check_appointment.py  clipboard.py  code_use_extract_products.py  create_user.py  cross_platform_test.py  custom_multi_task.py  custom_output.py  custom_system_prompt.py  deepseek.py  demo_mode_example.py  device_id  file_upload.py  find_and_apply_to_jobs.py  gemini.py  glazyr_benchmark.py  gradio.py  grocery_list.txt  llm_use_cloud_client.py  logviewer_demo.py  mac_compatibility_test.py  multi-tab_handling.py  multiple_agents_same_browser.py  naver_direct_test.py  notification.py  ollama.py  online_coding_agent.py  parallel_agents.py  playright-script-generator.py  post-twitter.py  process_tasks_example.py  qwen.py  read_from_file.py  real_browser.py  (+23 more)
extension/: background.js
go/: go.mod  go.sum
integration_scripts/: README.md  amazon_add_to_cart_playwright.py  flipkart_add_to_cart_cdp.py  flipkart_add_to_cart_playwright.py  test_download_path_issue.py
logger/: registry.py
multiagent/: __init__.py  config.py  logging.py  orchestrator.py
parallel_orchestrator/: README.md  __init__.py  base_agent.py  example.py  real_interface.py  shared_memory.py  task_queue.py  test_dynamic.py  test_shared_memory.py  worker_agent.py
playground/: example.py  sentience_basic.py  sentience_cached_snapshot.py
prompts/: critic.md  planner.md  searcher.md
reproducing-issues/: paris_mou.py
running_dirs/: run.sh  run_multiagent.py
scripts/: _backfill_continuous_nav.py  bootstrap_ra.py  build_planning_cadence_n6.py  compute_milestone_metrics.py  compute_paper_stats.py  export_adaptive_pilot.py  generate_paper_figures.py  merge_all_runs.py  migrate_human_runs.py  run_adaptive_batch.py  run_cadence_batch.py  run_cloud_eval.py  run_full_eval_batch.py  run_multiagent.py  run_version_eval.py
tardygrada/: README.md
tests/: __init__.py  extraction_test.py  test_action_filters.py  test_agent_actions.py  test_agent_additional_steps.py  test_agent_dynamic_tool_discovery.py  test_agent_mcp_integration.py  test_anti_fingerprint.py  test_attach_chrome.py  test_auto_heal.py  test_browser.py  test_browser_context.py  test_browser_profile.py  test_cache.py  test_cli_process_liveness.py  test_context.py  test_controller.py  test_core_functionality.py  test_date_picker_integration.py  test_dropdown.py  test_dropdown_complex.py  test_dropdown_error.py  test_excluded_actions.py  test_full_screen.py  test_gif_path.py  test_google_spreadsheet.py  test_granular_memory.py  test_hover_and_evaluate.py  test_invariant_downloads_watchdog.py  test_invariant_service.py  test_mfa_authentication.py  test_mind2web.py  test_models.py  test_omniparser_fallback.py  test_planning.py  test_playwright_script_generation.py  test_prompts.py  test_qwen.py  test_react_dropdown.py  test_self_registered_actions.py  (+11 more)
web-version/: README.md  SETUP.md
(+1527 files in other folders)
